# datamodel-code-generator

./: .coderabbit.yaml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  404.html  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  Zensical.toml  action.yml  index.html  mkdocs.yaml  mkdocs.yml  model.py  mypy.ini  pyproject.toml  requirements-docs.txt  requirements.txt  search.json  setup.cfg  setup.py  sitemap.xml  tox.ini  underwriting.json  zensical.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: action-smoke.yaml  autofix-apply.yaml  changelog.yaml  cli-docs.yaml  codeql.yaml  codeql.yml  codespell.yaml  codespell.yml  codspeed.yaml  codspeed.yml  config-types.yaml  docker.yaml  docs-deploy.yaml  docs.yaml  docs.yml  generated-docs-sync.yaml  lint.yaml  llms-txt.yaml  payload-runtime-compatibility.yaml  perf.yaml  playground-lint.yaml  publish.yaml  publish.yml  readme.yaml  release-benchmarks.yaml  release-draft.yaml  release-notify.yaml  schema-docs.yaml  test.yaml  test.yml
aliases/: index.html
assets/javascripts/: bundle.00c35305.min.js  bundle.21aa498e.min.js  bundle.6008f134.min.js
changelog/: index.html
ci-cd/: index.html
class-decorators/: index.html
cli-reference/: index.html
cli-reference/base-options/: index.html
cli-reference/field-customization/: index.html
cli-reference/general-options/: index.html
cli-reference/model-customization/: index.html
cli-reference/openapi-only-options/: index.html
cli-reference/quick-reference/: index.html
cli-reference/template-customization/: index.html
cli-reference/typing-customization/: index.html
cli-reference/utility-options/: index.html
custom-formatters/: index.html
custom_template/: index.html
custom_templates/: index.html
datamodel_code_generator/: __init__.py  __main__.py  api.yaml  arguments.py  format.py  http.py  http_vmanage_auth.py  imports.py  main.py  pydantic_patch.py  reference.py  types.py  util.py  version.py
datamodel_code_generator/formatter/: __init__.py  base.py  black.py  isort.py  ruff.py
datamodel_code_generator/model/: __init__.py  alias.py  base.py  custom_root_type.py  dataclass.py  enum.py  imports.py  improts.py  msgspec.py  pydantic.py  root.py  rootmodel.py  scalar.py  typed_dict.py  types.py  union.py
datamodel_code_generator/parser/: __init__.py  base.py  graphql.py  (+2 more)
development-contributing/: index.html
docs/: aliases.md  architecture.md  asyncapi.md  avro.md  ci-cd.md  class-decorators.md  coding-agent-skill.md  conformance.md  custom-formatters.md  custom_template.md  custom_templates.md  deprecations.md  development-contributing.md  dynamic-model-generation.md  experimental.md  faq.md  field-constraints.md  formatter-behavior.md  formatting.md  graphql.md  index.md  jsondata.md  jsonschema.md  llm-integration.md  llms-full.txt  llms.txt  mcp-tools.md  model-reuse.md  module-exports.md  oneliner.md  openapi-options.md  openapi.md  output-model-types.md  performance-benchmarks.md  playground.md  pragma-no-cover-inventory.md  presets.md  protobuf.md  pyproject_toml.md  python-model.md  (+10 more)
faq/: index.html
field-constraints/: index.html
formatting/: index.html
graphql/: index.html
jsondata/: index.html
jsonschema/: index.html
llm-integration/: index.html
model-reuse/: index.html
module-exports/: index.html
oneliner/: index.html
openapi/: index.html
openapi-options/: index.html
output_models/: __init__.py  collection_s.py  model_s.py
overrides/: main.html
pyproject_toml/: index.html
python-version-compatibility/: index.html
root-model-and-type-alias/: index.html
scripts/: __init__.py  build_architecture_docs.py  build_cli_docs.py  build_conformance_docs.py  build_datamodel_codegen_skill_docs.py  build_deprecation_docs.py  build_diagrams.py  build_docs_examples.py  build_experimental_docs.py  build_llms_txt.py  build_model_metadata_schema.py  build_playground_assets.py  build_playground_release_versions.py  build_preset_docs.py  build_prompt_data.py  build_release_benchmark_docs.py  build_schema_docs.py  check_generation_store_usage.py  check_sdist_test_support.py  collect_release_benchmarks.py  format.sh  generate_changelog.sh  lint.sh  lint_playground.sh  measure_startup.py  merge_release_benchmarks.py  release_benchmark_errors.py  release_benchmark_safety.py  run_apache_avro_schema_pass_e2e.py  run_asyncapi_spec_json_schemas_e2e.py  run_jsonschema_suite_conformance.py  run_protobuf_official_e2e.py  run_w3c_xmlschema_e2e.py  select_ci_test_shard.py  select_release_benchmark_versions.py  test.bat  test.sh  update_command_help_on_markdown.py  update_docs_version.py  update_generate_prompt_snapshots.py  (+2 more)
search/: search_index.json
support-data-types/: index.html
supported-data-types/: index.html
tests/: __init__.py  conftest.py  test_assert_helper_usage.py  test_base.py  test_build_architecture_docs_script.py  test_build_conformance_docs_script.py  test_build_deprecation_docs_script.py  test_build_docs_examples_script.py  test_build_experimental_docs_script.py  test_build_playground_assets_script.py  test_build_preset_docs_script.py  test_build_release_benchmark_docs_script.py  test_build_schema_docs_script.py  test_conftest_helpers.py  test_deprecations.py  test_dummy.py  test_enums.py  test_experimental.py  test_format.py  test_generate_changelog_script.py  test_http.py  test_imports.py  test_infer_input_type.py  test_input_model.py  test_is_schema.py  test_json_config.py  test_main.py  test_main_kr.py  test_package_metadata.py  test_prompt.py  test_public_api_signature.py  test_reference.py  test_resolver.py  test_select_ci_test_shard_script.py  test_types.py  test_update_command_help_on_markdown_script.py  test_util.py  test_validate_release_draft_analysis_script.py  test_validators.py  test_yaml_backend.py
type-mappings/: index.html
using_as_module/: index.html
what_is_the_difference_between_v1_and_v2/: index.html
(+3986 files in other folders)
