[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.25",
]

[project]
name = "datamodel-code-generator"
description = "Datamodel Code Generator"
readme.content-type = "text/markdown"
readme.file = "README.md"
license = "MIT"
authors = [ { name = "Koudai Aono", email = "koxudaxi@gmail.com" } ]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = [
  "version",
]

dependencies = [
  "argcomplete>=2.10.1,<4",
  "black>=19.10b0",
  "genson>=1.2.1,<2",
  "graphql-core>=3.2.3",
  "httpx>=0.24.1",
  "inflect>=4.1,<6",
  "isort>=4.3.21,<6",
  "jinja2>=2.10.1,<4",
  "openapi-spec-validator>=0.2.8,<0.7",
  "packaging",
  "prance>=0.18.2",
  "pydantic>=1.5",
  "pysnooper>=0.4.1,<2",
  "pyyaml>=6.0.1",
  "tomli>=2.2.1,<3; python_version<='3.11'",
]
optional-dependencies.debug = [ "pysnooper" ]
optional-dependencies.graphql = [ "graphql-core" ]
optional-dependencies.http = [ "httpx" ]
optional-dependencies.validation = [ "openapi-spec-validator", "prance" ]
urls.Homepage = "https://github.com/koxudaxi/datamodel-code-generator"
urls.Source = "https://github.com/koxudaxi/datamodel-code-generator"
scripts.datamodel-codegen = "datamodel_code_generator.__main__:main"

[dependency-groups]
dev = [
  { include-group = "coverage" },
  { include-group = "docs" },
  { include-group = "fix" },
  { include-group = "pkg-meta" },
  { include-group = "test" },
  { include-group = "type" },
]
test = [
  "diff-cover>=7.7",
  "freezegun",
  "pytest>=6.1",
  "pytest>=8.3.4",
  "pytest-benchmark",
  "pytest-codspeed>=2.2",
  "pytest-cov>=2.12.1",
  "pytest-cov>=5",
  "pytest-mock>=3.14",
  "pytest-xdist>=3.3.1",
  "setuptools; python_version<'3.9'",
]
type = [
  "pyright>=1.1.393",
  "types-jinja2",
  "types-pyyaml",
  "types-setuptools>=67.6.0.5,<70",
  "types-toml",
  { include-group = "test" },
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5.31",
]
black19-pydantic18 = [ "black==19.10b0", "pydantic==1.8.2" ]
black22 = [ "black==22.1" ]
black23 = [ "black==23.12" ]
black24 = [ "black==24.1" ]
pydantic18 = [ "pydantic==1.8.2" ]
isort4-pydantic15 = [ "isort[pyproject]==4.3.21", "pydantic==1.5.1" ]
fix = [ "pre-commit>=3.5" ]
pkg-meta = [ "check-wheel-contents>=0.6.1", "twine>=6.1", "uv>=0.5.22" ]
coverage = [
  "coverage[toml]>=7.6.1",
  "diff-cover>=7.7",
]

[tool.hatch]
build.dev-mode-dirs = [ "." ]
build.targets.sdist.include = [
  "/datamodel_code_generator",
  "/tests",
]
version.source = "vcs"

[tool.ruff]
line-length = 88
extend-exclude = [ "tests/data" ]
format.indent-style = "space"
format.quote-style = "single"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.extend-select = [ "C4", "I", "Q", "RUF100", "UP" ]
lint.ignore = [ "E501", "Q000", "Q003", "UP006", "UP007" ]
lint.flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }

[tool.codespell]
skip = '.git,*.lock,tests'

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore:^.*The `parse_obj` method is deprecated; use `model_validate` instead.*",
  "ignore:^.*The `__fields_set__` attribute is deprecated, use `model_fields_set` instead.*",
  "ignore:^.*The `dict` method is deprecated; use `model_dump` instead.*",
  "ignore:^.*The `copy` method is deprecated; use `model_copy` instead.*",
  "ignore:^.*`--validation` option is deprecated.*",
  "ignore:^.*Field name `name` is duplicated on Pet.*",
  "ignore:^.*format of 'unknown-type' not understood for 'string' - using default.*",
  "ignore:^.*unclosed file.*",
  "ignore:^.*black doesn't support `experimental-string-processing` option for wrapping string literal in .*",
  "ignore:^.*jsonschema.exceptions.RefResolutionError is deprecated as of version 4.18.0. If you wish to catch potential reference resolution errors, directly catch referencing.exceptions.Unresolvable..*",
  "ignore:^.*`experimental string processing` has been included in `preview` and deprecated. Use `preview` instead..*",
]
norecursedirs = "tests/data/*"

[tool.coverage]
run.source = [ "datamodel_code_generator" ]
run.branch = true
run.omit = [ "scripts/*", "tests/*" ]
report.ignore_errors = true
report.exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if not TYPE_CHECKING:",
]
paths.source = [
  "datamodel_code_generator",
  ".tox*/*/lib/python*/site-packages/datamodel_code_generator",
  ".tox*\\*\\Lib\\site-packages/datamodel_code_generator",
  "*/datamodel_code_generator",
  "*\\datamodel_code_generator",
]

[tool.pyright]
reportPrivateImportUsage = false

[tool.pydantic-pycharm-plugin]
ignore-init-method-arguments = true
parsable-types.str = [ "int", "float" ]

[tool.uv]
conflicts = [
  [
    { group = "black24" },
    { group = "black22" },
    { group = "black23" },
    { group = "black19-pydantic18" },
    { group = "pydantic18" },
    { group = "isort4-pydantic15" },
    { group = "pkg-meta" },
  ],
  [
    { group = "black24" },
    { group = "black22" },
    { group = "black23" },
    { group = "black19-pydantic18" },
    { group = "pydantic18" },
    { group = "isort4-pydantic15" },
    { group = "dev" },
  ],
]
