[metadata]
name = datamodel-code-generator
description = Datamodel Code Generator
url = https://github.com/koxudaxi/datamodel-code-generator/
long_description = file: README.md
long_description_content_type = text/markdown
author = Koudai Aono
author_email = koxudaxi@gmail.com
license_file = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.6.1
zip_safe = True
setup_requires =
    pytest-runner
    setuptools-scm
install_requires =
    argcomplete
    prance
    openapi-spec-validator
    jinja2
    inflect
    pydantic

tests_require =
    pytest
    pytest-benchmark
    pytest-cov
    pytest-mock
    mypy
    black
    isort
    freezegun

[options.extras_require]
docs =
    mkdocs
    mkdocs-material

wheel =
    wheel
    twine

ci =
    codecov

[options.entry_points]
console_scripts =
    datamodel-codegen = datamodel_code_generator.__main__:main

[aliases]
test = pytest
