[metadata]
name = datamodel-code-generator
description = Datamodel Code Generator
url = https://github.com/koxudaxi/datamodel-code-generator/
long_description = file: README.md
long_description_content_type = text/markdown
author = Koudai Aono
author_email = koxudaxi@gmail.com
license_file = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.6.1
zip_safe = True
setup_requires =
    pytest-runner
    setuptools-scm
install_requires =
    argcomplete == 1.10.0
    prance == 0.15.0
    openapi-spec-validator == 0.2.8
    jinja2 == 2.10.1
    inflect == 2.1.0
    pydantic[email,ujson] == 0.32
    black == 19.3b0
    isort == 4.3.21

tests_require =
    pytest
    pytest-benchmark
    pytest-cov
    pytest-mock
    mypy
    isort
    freezegun

[options.extras_require]
docs =
    mkdocs
    mkdocs-material

wheel =
    wheel
    twine

ci =
    codecov

[options.entry_points]
console_scripts =
    datamodel-codegen = datamodel_code_generator.__main__:main

[aliases]
test = pytest
