[metadata]
name = datamodel-code-generator
description = Datamodel Code Generator
url = https://github.com/koxudaxi/datamodel-code-generator/
long_description = file: README.md
long_description_content_type = text/markdown
author = Koudai Aono
author_email = koxudaxi@gmail.com
license_file = LICENSE
classifiers =
        Development Status :: 2 - Pre-Alpha
        Natural Language :: English
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
include_package_data = True
python_requires = >=3.6.1
zip_safe = True
setup_requires =
    pytest-runner
    setuptools-scm
install_requires =
    argcomplete>=1.11.1,<2.0
    prance>=0.18.2,<1.0
    openapi-spec-validator>=0.2.8,<0.3
    jinja2>=2.11.2,<3.0
    inflect>=4.1.0,<5.0
    pydantic[email]>=1.5.1,<2.0
    black>=19.10b0,<20
    isort>=4.3.21,<5.0
    PySnooper>=0.4.1,<1.0.0
    toml>=0.10.1,<1.0.0
    genson>=1.2.1,<2.0

tests_require =
    pytest>=4.6
    pytest-benchmark
    pytest-cov
    pytest-mock
    mypy
    isort
    freezegun

[options.extras_require]
http =
    httpx
docs =
    mkdocs
    mkdocs-material

wheel =
    wheel
    twine

ci =
    codecov

[options.entry_points]
console_scripts =
    datamodel-codegen = datamodel_code_generator.__main__:main

[aliases]
test = pytest

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[tool:pytest]
filterwarnings = ignore::DeprecationWarning:distutils

[coverage:run]
source = datamodel_code_generator
branch = True

[coverage:report]
ignore_errors = True
exclude_lines =
    if self.debug:
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
omit =
    tests/*
